# quick-deploy-agents

./: README.md  interactive_deploy.py  interactive_deregister.py  interactive_destroy.py  interactive_manager.py  interactive_register.py  pyproject.toml  webui_manager.py
agents_gallery/: .env
agents_gallery/data_science/: .env  README.md  agent.py  prompts.py  tools.py
agents_gallery/data_science/sub_agents/: __init__.py
agents_gallery/data_science/sub_agents/analytics/: agent.py
agents_gallery/data_science/sub_agents/bigquery/: prompts.py  tools.py
agents_gallery/data_science/sub_agents/bigquery/chase_sql/: llm_utils.py
agents_gallery/data_science/sub_agents/bigquery/chase_sql/sql_postprocessor/: sql_translator.py
agents_gallery/data_science/sub_agents/bqml/: agent.py  prompts.py  tools.py
agents_gallery/data_science/utils/: create_bq_table.py  create_code_executor_extension.py  reference_guide_RAG.py  set_agentengine_gcp_perms.sh
agents_gallery/eval/: itinerary_empty_default.json
agents_gallery/tools_agent/: agent.py  tools.py
agents_gallery/travel_concierge/: prompt.py
deployment_utils/: deployment_configs.py
